# llm-serving-lab

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
benchmarks/: baseline.py  concurrency_sweep.py  prefix_cache.py  quantization.py
results/: baseline_cuda.json  baseline_cuda_smollm2.json  baseline_mps.json  concurrency_sweep_cuda.json  concurrency_sweep_mps.json  prefix_cache_cuda.json  prefix_cache_mps.json  quantization_bf16_cuda.json  quantization_int4_cuda.json  quantization_int8_cuda.json  speculative_decoding_n2_cuda.json  speculative_decoding_n5_cuda.json
utils/: config.py  constants.py  single_request.py  throttled_request.py
