[project]
name = "llm-serving-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "mlx-lm>=0.31.1",
    "numpy>=2.4.4",
    "pandas==3.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn==0.42.0",
]
